[package]
name = "gitpush"
version = "0.0.3"
edition = "2021"
authors = [ "Justin Zhu <vac872089248@gmail.com>" ]
license = "MIT OR Apache-2.0"
description = "A tool to run git push easily"
readme = "README.md"
homepage = "http://zhuqingguang.github.io"
keywords = [ "cli", "git", "push" ]
categories = ["command-line-interface"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4.14"
env_logger = "0.8.4"
regex = "1.5.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
